--- a/index.html
+++ b/index.html
@@ -2,63 +2,38 @@
 <html>
 <TT>
 <font size="+2">
+<font color= "white">
 <head>
+<meta charset="utf-8">
+<title>~slike~</title>
+<link rel="stylesheet" href="stil.css"/>
 <title>𓍊Mia Šlafhauzer</title>
      <link rel="stylesheet" href="stil.css"/>
 </head>
-<body style="background-image: url('digmult.jpg');">
+<style>
+body {
+background-image: url('pozadina.jpg'); 
+
+</style>
 </body>
 
 <body>
-<h1 style="color:white"> <b>𓍊𓋼𓍊𓋼𓍊 digitalni multimedij 𓆏 𓍊𓋼𓍊𓋼𓍊｡</b></h1>
-<h2 style="color:white"><b>ཐི♡ཋྀ   mia šlafhauzerཐ ི♡ཋྀ</b></h2>
-<h3 style="color:white">(unaprijed: suviše random) </h3>
-<p style="color:white" class="paragraf_2">“I don't know the world, I don't even know <b>myself</b>. <br/>
-I'm forever <i>daydreaming</i> and often can't tell dreams from reality.” <br/> </q> -iz filma <i> ''Valerie and her week of wonders''</i>
+<h1 style="text-align: center">  <b>𓍊𓋼𓍊𓋼𓍊 Mia Šlafhauzer 𓆏 𓍊𓋼𓍊𓋼𓍊｡</b></h1>
+<h2 style="text-align: center">><b>ཐི♡ཋྀ Digitalni multimedij 1  ི♡ཋྀ</b></h2>
+<p style="text-align: center" class="paragraf_2">Ja sam Mia Šlafhauzer. </br> Dobrodošli na moju web-stranicu na kojoj možete saznati više o meni,</br>vježbama koje sam odrađivala ovaj semestar </b>te možete vidjeti moj projektni reklamni video. </br>Nadam se da će vam se svidjeti moj materijal! </p>
 </p>
-<p style="color:white"><b>Ovo je tekst moje omiljene pjesme:</b></p>
-<blockquote style="color:white">All of this turbulence wasn't forecasted <br/>
-Apologies from the intercom <br/>
-And I am relieved that I'd left my room tidy <br/>
-They'll think of me kindly when they come for my things <br/>> -Mitski
-</blockquote>
-<p style="color:white;"><b>📼 Ovo je moj trenutni popis ''must-watch'' filmova</b><p/>
-<p style="color: yellow;">Perfect blue</span>(Odmah nakon njega treba pogledati Papriku)</p>
-<p style="color:yellow;">Double life of Veronique (Krzystof Kieslowski je samo kralj ženske agonije)</p>
-<p style="color: yellow;">Fallen angels</span>(Wong Kar Wai i ljepota scene i filmske vrpce)</p>
-
-
-<a style="color:white" href="https://www.youtube.com/@oliSUNvia">link na youtube stranicu moje najdraže esej vloggerice</a><br/>
-<a style="color:white"  href="slike.html">link na dokument sa slikama</a><br/>
-<a style="color:white" href="http://marul.ffst.hr/~bwillems/fymob/npsr.pdf">link za pdf knjigu</a
-<div class="novi_blok">
-<h2 style="color:white">popisi:</h2>
-<p></p>
-<p style="color:white">najslušanije pjesme:</p>
-<ol style="color:white">
-     <li>Andromeda - weyes blood </li>
-	 <li>Class of 2013 - mitski</li>
-	 <li>Starting over - LSD and the search for god</li>
-</ol>
-<p></p>
-<p style="color:white">knjige:</p>
-<p></p>
-<ul style="color:white">
-     <li>my year of rest and relaxation</li>
-     <li>1984</li>
-	 <li>tri posleratna druga</li>
 </ul>
-<h2 style="color:white">navigacijska lista sa linkovima:</h2>
+<h2 style="text-align: center">navigacijska lista</h2>
 <nav>
     <ul>
-	    <li><a href="https://tetris.com/play-tetris"><font style="color:white"> ~tetris</a></li>
-		<li><a href="https://www.imdb.com/title/tt0071203/?ref_=tt_tpks_tt_t_15_pd_detail_2_pbr_ic"><font style="color:white">imdb filma</a></li>
-	    <li><a href="vjezba2.html"><font style="color:white">  ~multimedija </a></li>	
+	    <li><a href="https://tetris.com/play-tetris"><font style="text-align:center; color:white"> o meni</a></li>
+		<li><a href="https://www.imdb.com/title/tt0071203/?ref_=tt_tpks_tt_t_15_pd_detail_2_pbr_ic"><font style="color:white">vježba</a></li>
+	    <li><a href="vjezba2.html"><font style="color:white">  video </a></li>	
 	</ul>
 </nav>
 </div>
-</TT></font>
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/71fvQar6JS5NFlC8EYpnRa?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+</TT></font></font> 
+
 </body>
 </html>
 
